# prelude-xml-parser

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile
.github/: release_drafter_template.yml
.github/workflows/: publish.yml  publish_binaries.yml  testing.yml
benches/: parse_benchmark.rs
prelude-xml-parser-macros/: Cargo.toml  LICENSE  README.md
prelude-xml-parser-macros/src/: lib.rs
src/: errors.rs  lib.rs  native.rs  native_parser.rs  subject_native.rs
src/native/: common.rs  deserializers.rs  mod.rs  site_native.rs  subject_native.rs  user_native.rs
src/native/snapshots/: prelude_xml_parser__native__site_native__tests__deserialize_site_native_json.snap  prelude_xml_parser__native__subject_native__tests__deserialize_subject_native_json.snap  prelude_xml_parser__native__user_native__tests__deserialize_user_native_json.snap
tests/assets/: flat1.xml  site_native.xml  site_native_small.xml  subject_native.xml  subject_native_small.xml  user_native.xml
