[package]
name = "prelude-xml-parser"
version = "0.8.0"
edition = "2021"
authors = ["Paul Sanders <paul@pbsdatasolutions.com>"]
description = "Deserialize Prelude EDC native XML files into Rust stucts."
documentation = "https://docs.rs/prelude-xml-parser"
homepage = "https://github.com/pbs-data-solutions/prelude-xml-parser"
repository = "https://github.com/pbs-data-solutions/prelude-xml-parser"
readme = "README.md"
keywords = ["prelude-edc", "xml", "deserialization", "pyo3"]
license = "MIT"

[features]
python = ["dep:pyo3"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
pyo3 = { version = "0.25.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.8.1"
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
tempfile = "3.20.0"
