[package]
name = "prelude-xml-parser"
version = "0.9.1"
edition = "2021"
authors = ["Paul Sanders <paul@pbsdatasolutions.com>"]
description = "Deserialize Prelude EDC native XML files into Rust stucts."
documentation = "https://docs.rs/prelude-xml-parser"
homepage = "https://github.com/pbs-data-solutions/prelude-xml-parser"
repository = "https://github.com/pbs-data-solutions/prelude-xml-parser"
readme = "README.md"
keywords = ["prelude-edc", "xml", "deserialization", "pyo3"]
license = "MIT"

[features]
python = ["dep:pyo3"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
pyo3 = { version = "0.26.0", optional = true }
quick-xml = { version = "0.38.3", features = ["serde", "serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
tempfile = "3.21.0"
