[package]
name = "prelude-xml-parser"
version = "0.9.2"
edition = "2021"
authors = ["Paul Sanders <paul@pbsdatasolutions.com>"]
description = "Deserialize Prelude EDC native XML files into Rust stucts."
documentation = "https://docs.rs/prelude-xml-parser"
homepage = "https://github.com/pbs-data-solutions/prelude-xml-parser"
repository = "https://github.com/pbs-data-solutions/prelude-xml-parser"
readme = "README.md"
keywords = ["prelude-edc", "xml", "deserialization", "pyo3"]
license = "MIT"

[features]
python = ["dep:pyo3"]

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
pyo3 = { version = "0.28.1", optional = true }
quick-xml = { version = "0.39.0", features = ["serde", "serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
tempfile = "3.25.0"
